# interactive-transformer

./: README.md
python/: .gitignore  main.py  pyproject.toml
svelte/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
svelte/src/: app.postcss
svelte/src/lib/: TransmissionMaterial.js  constants.js  graphs.js  helpers.js  layout.js  stores.js
svelte/src/lib/components/: Flow.svelte  Node.svelte  attention-view.svelte  data-view-scene.svelte  data-view.svelte  edge.svelte  flow-view.svelte  key-transition.svelte  layer-node.svelte  node.svelte  operation-node.svelte  select-layer.svelte  tensor-shape.svelte  test.svelte  text-input.svelte  token.svelte
svelte/src/lib/components/charts/: attention-map-canvas.svelte  attention-map-webgl-old.svelte  attention-map-webgl.svelte  attention-map.svelte  attention-maps-webgl.svelte  attention-maps.svelte  attention-view.svelte  color-legend.svelte  heatmap.svelte  logit-attribution-view.svelte  logit-attribution-vis.svelte  mesh-line.svelte  rect-canvas.svelte  spark-color-legend.svelte
svelte/src/lib/components/ui/sheet/: sheet-content.svelte
svelte/src/lib/components/ui/toggle/: index.ts  toggle.svelte
svelte/src/routes/: +page.svelte
