[tool.poetry]
name = "circuit-lab"
version = "0.1.0"
description = ""
authors = ["yizhe-ang <ang.yizhe@u.nus.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformer-lens = "^1.6.1"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
